cambios en admin.html

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -22,6 +22,7 @@
         <div class="footer">
             <a href="index.html">
                 <div class="index">Volver al index</div>
+                <p>hola buenas que tal como estamoss</p>
             </a>
         </div>
     </div>
